Polish profile settings implementation